# scorecard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: delete-old-workflow-runs.yml  python-package.yml
examples/: example.ipynb
scorecard/: __init__.py  card  card.py  interactive  iv  iv.py  perf  perf.py  util.py  woebin.py
scorecard/interactive/: __init__.py  app.py  interactive.py
scorecard/tests/: test.py  test_woebin.py
tests/: test_woebin.py
