[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorecard"
version = "0.0.1"
authors = [
    { name = "BI/GANG", email = "grants.tougher.0t@icloud.com" }
]
description = "Rewrite brand new robust scorecard toolbox, if you are looking for something similar as `scorecard` in R and `scorecardpy` in python."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Financial and Insurance Industry"
]
dependencies = [
  "pandas >=2.0.0",
  "scikit-learn >=1.6.0",
  "scipy >=1.15.0",
  "numba >= 0.62.0",
  "numpy >=2.0.0",
  "matplotlib >=3.10.0",
  "lightgbm >=4.6.0",
  "Jinja2 >=3.1.6",
  "pyperclip >=1.9.0"
]

[project.urls]
Homepage = "https://blanket58.github.io/2021/12/scorecard/"
