[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorecard"
dynamic = ["version"]
authors = [
    { name = "BI/GANG", email = "grants.tougher.0t@icloud.com" }
]
description = "Rewrite brand new robust scorecard toolbox, if you are looking for something similar as `scorecard` in R and `scorecardpy` in python."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Financial and Insurance Industry"
]
dependencies = [
  "pandas>=2.0,<4.0",
  "numpy>=1.24,<3.0",
  "numba>=0.60,<1.0",
  "scikit-learn>=1.5,<3.0",
  "scipy>=1.13,<2.0",
  "lightgbm>=4.0,<5.0",
  "matplotlib>=3.8,<4.0",
  "Jinja2>=3.1,<4.0",
  "pyperclip>=1.9,<2.0",
  "joblib>=1.3.0,<2.0"
]

[project.urls]
Homepage = "https://blanket58.github.io/2021/12/scorecard/"
